@@ -1,5 +1,11 @@
 2008-07-17	Jannis Pohlmann <jannis@xfce.org>
 
+	* dialogs/keyboard-settings/command-dialog.c: Make entry activate the
+	  default widget of the dialog. Make GTK_RESPONSE_OK the default
+	  dialog response.
+
+2008-07-17	Jannis Pohlmann <jannis@xfce.org>
+
 	* dialogs/accessibility-settings/accessibility-dialog.glade,
 	  dialogs/appearance-settings/appearance-dialog.glade,
 	  dialogs/display-settings/display-dialog.glade,
